--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@ footer {
           <div class="video-card">
             <h4 id="ir2bbp">Bricks AI for Spreadsheet &amp; Dashboard
               Automation <span class="external-badge">EXTERNAL</span></h4>
-            <p id="iasvqr"><a href="https://thebricks.ai/" target="_blank" rel="noopener"
-                class="software-highlight">TheBricks.ai</a> is a tool where you can use natural-language prompts ("make
+            <p id="iasvqr"><a href="https://thebricks.com/" target="_blank" rel="noopener"
+                class="software-highlight">TheBricks.com</a> is a tool where you can use natural-language prompts ("make
               a new column with the sum of sales and donations minus the VAT column") to manipulate spreadsheets and
               build simple dashboards without writing formulas.</p><iframe allowfullscreen=""
               src="https://www.youtube.com/embed/1vz6EkUhbOg?" class="video-embed"></iframe>
