--- a/index.html
+++ b/index.html
@@ -785,10 +785,8 @@
 					<div class="video-card">
 						<h4 id="iurw2w">Serif.ai: AI Email Drafts <span class="external-badge">EXTERNAL</span></h4>
 						<p id="i7jsls"><a href="https://www.serif.ai/" target="_blank" rel="noopener"
-								class="software-highlight">Serif.ai</a> listens to short voice notes while you sleep and
-							wakes you up to
-							an organised inbox: replies drafted, follow-ups sent, meetings scheduled—and everything
-							ready for review.
+								class="software-highlight">Serif.ai</a> reads your emails and drafts replies based on your past responses.
+							A great tool to save you hours every week. In testing on my personal inbox, nearly half of the AI's drafts were pretty close to what I would have said anyways.
 						</p><iframe allowfullscreen="" src="https://www.youtube.com/embed/3G2lAyjkasw?"
 							class="video-embed"></iframe>
 					</div>
